--- a/myreport/complexity.html
+++ b/myreport/complexity.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
     <div class="row">
@@ -57,20 +57,29 @@
             <div class="bloc bloc-number">
                 <div class="label">Average cyclomatic complexity by class</div>
                 <div class="number">
-                    1.6                </div>
-                            </div>
+                    1.63                </div>
+                <span title="Last value: 1.6" class="progress progress-bad progress-gt">+0.03 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>            </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">Average relative System complexity</div>
                 <div class="number">
-                    62.68                </div>
-                            </div>
+                    69.92                </div>
+                <span title="Last value: 62.68" class="progress progress-bad progress-gt">+7.24 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>            </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">Average bugs by class
-                    <small>(Halstead)</small>                 </div>
+                    <small>(Halstead)</small> <span title="Last value: 0.04" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                </div>
                 <div class="number">
                     0.04                </div>
             </div>
@@ -78,9 +87,12 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">average defects by class
-                    <small>(Kan)</small>                 </div>
+                    <small>(Kan)</small> <span title="Last value: 0.24" class="progress progress-bad progress-gt">+0.01 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span>                </div>
                 <div class="number">
-                    0.24                </div>
+                    0.25                </div>
             </div>
         </div>
     </div>
@@ -153,6 +165,16 @@
                             <td>0.15</td>
                         </tr>
                                             <tr>
+                            <td>App\Repository\GuildSquadRepository</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>1.5</td>
+                            <td>0.5</td>
+                            <td>1</td>
+                            <td>0</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
                             <td>App\Repository\SettingRepository</td>
                             <td>1</td>
                             <td>1</td>
@@ -183,6 +205,16 @@
                             <td>0.15</td>
                         </tr>
                                             <tr>
+                            <td>App\Entity\GuildSquad</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>7.43</td>
+                            <td>7.43</td>
+                            <td>0</td>
+                            <td>0.02</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
                             <td>App\Entity\Setting</td>
                             <td>1</td>
                             <td>1</td>
@@ -206,11 +238,21 @@
                             <td>App\Entity\Account</td>
                             <td>1</td>
                             <td>1</td>
-                                                        <td>13.84</td>
-                            <td>4.84</td>
-                            <td>9</td>
-                            <td>0.11</td>
+                                                        <td>21.08</td>
+                            <td>5.08</td>
+                            <td>16</td>
                             <td>0.15</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Entity\RequestTrait</td>
+                            <td>3</td>
+                            <td>3</td>
+                                                        <td>9.75</td>
+                            <td>0.75</td>
+                            <td>9</td>
+                            <td>0.02</td>
+                            <td>0.45</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\Guild</td>
@@ -284,13 +326,33 @@
                         </tr>
                                             <tr>
                             <td>App\Handler\ApiHandler</td>
-                            <td>3</td>
-                            <td>2</td>
-                                                        <td>400.47</td>
-                            <td>0.47</td>
-                            <td>400</td>
-                            <td>0.16</td>
-                            <td>0.29</td>
+                            <td>6</td>
+                            <td>4</td>
+                                                        <td>1024.44</td>
+                            <td>0.44</td>
+                            <td>1024</td>
+                            <td>0.36</td>
+                            <td>0.82</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Handler\GuildSquadHandler</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>36.14</td>
+                            <td>0.14</td>
+                            <td>36</td>
+                            <td>0.03</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Handler\AccountHandler</td>
+                            <td>1</td>
+                            <td>0</td>
+                                                        <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0.15</td>
                         </tr>
                                             <tr>
                             <td>App\Handler\UserCharacterHandler</td>
@@ -323,6 +385,26 @@
                             <td>0.15</td>
                         </tr>
                                             <tr>
+                            <td>DoctrineMigrations\Version20180211173413</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>16.2</td>
+                            <td>0.2</td>
+                            <td>16</td>
+                            <td>0.02</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
+                            <td>DoctrineMigrations\Version20180211103612</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>16.2</td>
+                            <td>0.2</td>
+                            <td>16</td>
+                            <td>0.01</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
                             <td>DoctrineMigrations\Version20180202183035</td>
                             <td>1</td>
                             <td>1</td>
@@ -350,6 +432,16 @@
                             <td>0.2</td>
                             <td>16</td>
                             <td>0.04</td>
+                            <td>0.15</td>
+                        </tr>
+                                            <tr>
+                            <td>DoctrineMigrations\Version20180211183331</td>
+                            <td>1</td>
+                            <td>1</td>
+                                                        <td>16.2</td>
+                            <td>0.2</td>
+                            <td>16</td>
+                            <td>0.01</td>
                             <td>0.15</td>
                         </tr>
                                             <tr>
@@ -474,13 +566,13 @@
                         </tr>
                                             <tr>
                             <td>App\Controller\API\UserCharacterController</td>
-                            <td>1</td>
-                            <td>1</td>
-                                                        <td>36.36</td>
-                            <td>0.36</td>
-                            <td>36</td>
-                            <td>0.01</td>
-                            <td>0.15</td>
+                            <td>2</td>
+                            <td>2</td>
+                                                        <td>144.33</td>
+                            <td>0.33</td>
+                            <td>144</td>
+                            <td>0.02</td>
+                            <td>0.22</td>
                         </tr>
                                             <tr>
                             <td>App\Controller\API\HookController</td>
@@ -493,14 +585,24 @@
                             <td>0.15</td>
                         </tr>
                                             <tr>
-                            <td>App\Controller\API\AccountController</td>
+                            <td>App\Controller\API\GuildSquadController</td>
                             <td>1</td>
                             <td>1</td>
-                                                        <td>16.4</td>
-                            <td>0.4</td>
-                            <td>16</td>
-                            <td>0</td>
+                                                        <td>64.53</td>
+                            <td>0.53</td>
+                            <td>64</td>
+                            <td>0.01</td>
                             <td>0.15</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Controller\API\AccountController</td>
+                            <td>2</td>
+                            <td>2</td>
+                                                        <td>64.41</td>
+                            <td>0.41</td>
+                            <td>64</td>
+                            <td>0.03</td>
+                            <td>0.22</td>
                         </tr>
                                             <tr>
                             <td>App\Kernel</td>
@@ -587,7 +689,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
