--- a/myreport/coupling.html
+++ b/myreport/coupling.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
 <div class="row">
@@ -109,6 +109,13 @@
                         <td>0</td>
                     </tr>
                                     <tr>
+                        <td>App\Repository\GuildSquadRepository</td>
+                        <td>0</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
                         <td>App\Repository\SettingRepository</td>
                         <td>0</td>
                         <td>3</td>
@@ -120,14 +127,21 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0.2</td>
-                        <td>0.26</td>
+                        <td>0.25</td>
                     </tr>
                                     <tr>
                         <td>App\Entity\UserCharacter</td>
                         <td>2</td>
                         <td>2</td>
                         <td>0.5</td>
-                        <td>0.28</td>
+                        <td>0.27</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Entity\GuildSquad</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>0.5</td>
+                        <td>0</td>
                     </tr>
                                     <tr>
                         <td>App\Entity\Setting</td>
@@ -145,9 +159,16 @@
                     </tr>
                                     <tr>
                         <td>App\Entity\Account</td>
+                        <td>2</td>
+                        <td>7</td>
+                        <td>0.78</td>
+                        <td>0.01</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Entity\RequestTrait</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>4</td>
-                        <td>0.8</td>
+                        <td>1</td>
                         <td>0</td>
                     </tr>
                                     <tr>
@@ -155,7 +176,7 @@
                         <td>7</td>
                         <td>2</td>
                         <td>0.22</td>
-                        <td>0.07</td>
+                        <td>0.06</td>
                     </tr>
                                     <tr>
                         <td>App\Utils\BaseCrawler</td>
@@ -176,7 +197,7 @@
                         <td>4</td>
                         <td>5</td>
                         <td>0.56</td>
-                        <td>0.01</td>
+                        <td>0</td>
                     </tr>
                                     <tr>
                         <td>App\Utils\CrawlerFactory</td>
@@ -201,10 +222,24 @@
                     </tr>
                                     <tr>
                         <td>App\Handler\ApiHandler</td>
-                        <td>2</td>
-                        <td>7</td>
-                        <td>0.78</td>
+                        <td>4</td>
+                        <td>8</td>
+                        <td>0.67</td>
                         <td>0.01</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Handler\GuildSquadHandler</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Handler\AccountHandler</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
                     </tr>
                                     <tr>
                         <td>App\Handler\UserCharacterHandler</td>
@@ -228,6 +263,20 @@
                         <td>0</td>
                     </tr>
                                     <tr>
+                        <td>DoctrineMigrations\Version20180211173413</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
+                        <td>DoctrineMigrations\Version20180211103612</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
                         <td>DoctrineMigrations\Version20180202183035</td>
                         <td>0</td>
                         <td>2</td>
@@ -243,6 +292,13 @@
                     </tr>
                                     <tr>
                         <td>DoctrineMigrations\Version20180204093803</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
+                        <td>DoctrineMigrations\Version20180211183331</td>
                         <td>0</td>
                         <td>2</td>
                         <td>1</td>
@@ -347,9 +403,16 @@
                         <td>0</td>
                     </tr>
                                     <tr>
+                        <td>App\Controller\API\GuildSquadController</td>
+                        <td>0</td>
+                        <td>7</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
                         <td>App\Controller\API\AccountController</td>
                         <td>0</td>
-                        <td>4</td>
+                        <td>6</td>
                         <td>1</td>
                         <td>0</td>
                     </tr>
@@ -425,7 +488,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
