--- a/myreport/loc.html
+++ b/myreport/loc.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
 
@@ -121,6 +121,14 @@
                         <td>45.36</td>
                     </tr>
                                     <tr>
+                        <td>App\Repository\GuildSquadRepository</td>
+                        <td>8</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                                    <tr>
                         <td>App\Repository\SettingRepository</td>
                         <td>12</td>
                         <td>13</td>
@@ -145,6 +153,14 @@
                         <td>47.26</td>
                     </tr>
                                     <tr>
+                        <td>App\Entity\GuildSquad</td>
+                        <td>39</td>
+                        <td>73</td>
+                        <td>67.21</td>
+                        <td>16.8</td>
+                        <td>47.46</td>
+                    </tr>
+                                    <tr>
                         <td>App\Entity\Setting</td>
                         <td>69</td>
                         <td>98</td>
@@ -162,11 +178,19 @@
                     </tr>
                                     <tr>
                         <td>App\Entity\Account</td>
-                        <td>107</td>
-                        <td>139</td>
-                        <td>332</td>
-                        <td>28.09</td>
-                        <td>45.93</td>
+                        <td>136</td>
+                        <td>193</td>
+                        <td>446.18</td>
+                        <td>34.63</td>
+                        <td>46.35</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Entity\RequestTrait</td>
+                        <td>16</td>
+                        <td>9</td>
+                        <td>63.12</td>
+                        <td>18.41</td>
+                        <td>40.07</td>
                     </tr>
                                     <tr>
                         <td>App\Entity\Guild</td>
@@ -226,11 +250,27 @@
                     </tr>
                                     <tr>
                         <td>App\Handler\ApiHandler</td>
-                        <td>69</td>
-                        <td>66</td>
-                        <td>490.69</td>
-                        <td>65.43</td>
-                        <td>44.17</td>
+                        <td>108</td>
+                        <td>92</td>
+                        <td>1090.68</td>
+                        <td>102.97</td>
+                        <td>43.39</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Handler\GuildSquadHandler</td>
+                        <td>15</td>
+                        <td>7</td>
+                        <td>76.11</td>
+                        <td>23.88</td>
+                        <td>38.34</td>
+                    </tr>
+                                    <tr>
+                        <td>App\Handler\AccountHandler</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>38.99</td>
                     </tr>
                                     <tr>
                         <td>App\Handler\UserCharacterHandler</td>
@@ -257,6 +297,22 @@
                         <td>45.09</td>
                     </tr>
                                     <tr>
+                        <td>DoctrineMigrations\Version20180211173413</td>
+                        <td>15</td>
+                        <td>5</td>
+                        <td>54</td>
+                        <td>47.25</td>
+                        <td>34.97</td>
+                    </tr>
+                                    <tr>
+                        <td>DoctrineMigrations\Version20180211103612</td>
+                        <td>14</td>
+                        <td>5</td>
+                        <td>44.92</td>
+                        <td>38.5</td>
+                        <td>35.68</td>
+                    </tr>
+                                    <tr>
                         <td>DoctrineMigrations\Version20180202183035</td>
                         <td>16</td>
                         <td>5</td>
@@ -279,6 +335,14 @@
                         <td>125.02</td>
                         <td>116.69</td>
                         <td>30.92</td>
+                    </tr>
+                                    <tr>
+                        <td>DoctrineMigrations\Version20180211183331</td>
+                        <td>14</td>
+                        <td>5</td>
+                        <td>44.92</td>
+                        <td>38.5</td>
+                        <td>35.68</td>
                     </tr>
                                     <tr>
                         <td>DoctrineMigrations\Version20180206213005</td>
@@ -323,10 +387,10 @@
                                     <tr>
                         <td>App\Command\UserCharacterCommand</td>
                         <td>34</td>
-                        <td>0</td>
+                        <td>24</td>
                         <td>210.83</td>
                         <td>196.12</td>
-                        <td>0</td>
+                        <td>41.98</td>
                     </tr>
                                     <tr>
                         <td>App\DataFixtures\LoadSettings</td>
@@ -339,10 +403,10 @@
                                     <tr>
                         <td>App\Controller\ShopController</td>
                         <td>8</td>
-                        <td>11</td>
+                        <td>14</td>
                         <td>4.75</td>
                         <td>9.51</td>
-                        <td>46.21</td>
+                        <td>47.22</td>
                     </tr>
                                     <tr>
                         <td>App\Controller\API\GuildController</td>
@@ -378,11 +442,11 @@
                     </tr>
                                     <tr>
                         <td>App\Controller\API\UserCharacterController</td>
-                        <td>12</td>
-                        <td>17</td>
-                        <td>18.58</td>
-                        <td>24.77</td>
-                        <td>46.35</td>
+                        <td>20</td>
+                        <td>30</td>
+                        <td>58.95</td>
+                        <td>10.48</td>
+                        <td>46.6</td>
                     </tr>
                                     <tr>
                         <td>App\Controller\API\HookController</td>
@@ -393,12 +457,20 @@
                         <td>42.01</td>
                     </tr>
                                     <tr>
+                        <td>App\Controller\API\GuildSquadController</td>
+                        <td>20</td>
+                        <td>45</td>
+                        <td>39.47</td>
+                        <td>24.29</td>
+                        <td>48.03</td>
+                    </tr>
+                                    <tr>
                         <td>App\Controller\API\AccountController</td>
-                        <td>13</td>
-                        <td>16</td>
-                        <td>12</td>
-                        <td>18</td>
-                        <td>45.65</td>
+                        <td>20</td>
+                        <td>30</td>
+                        <td>76.4</td>
+                        <td>14.33</td>
+                        <td>46.6</td>
                     </tr>
                                     <tr>
                         <td>App\Kernel</td>
@@ -475,7 +547,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
@@ -639,31 +711,31 @@
         "percentile": 55.00000000000001
     },
     {
-        "lloc": 22,
+        "lloc": 20,
         "percentile": 60
     },
     {
-        "lloc": 24,
+        "lloc": 22,
         "percentile": 65
     },
     {
-        "lloc": 26,
+        "lloc": 24,
         "percentile": 70
     },
     {
-        "lloc": 34,
+        "lloc": 29,
         "percentile": 75
     },
     {
-        "lloc": 35,
+        "lloc": 34,
         "percentile": 80
     },
     {
-        "lloc": 40,
+        "lloc": 39,
         "percentile": 85.00000000000001
     },
     {
-        "lloc": 69,
+        "lloc": 57,
         "percentile": 90
     },
     {
@@ -671,7 +743,7 @@
         "percentile": 95
     },
     {
-        "lloc": 79,
+        "lloc": 108,
         "percentile": 100
     }
 ];
