--- a/myreport/oop.html
+++ b/myreport/oop.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
 
@@ -57,23 +57,32 @@
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label">classes </div>
+                <div class="label">classes <span title="Last value: 45" class="progress progress-neutral progress-gt">+9 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
                 <div class="number">
-                    45                    <small> (100 %)</small>
+                    54                    <small> (100 %)</small>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label">interfaces </div>
-                <div class="number">2                    <small> (4 %)</small>
+                <div class="label">interfaces <span title="Last value: 2" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
+                <div class="number">3                    <small> (6 %)</small>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label">average LCOM </div>
-                <div class="number">1.38</div>
+                <div class="label">average LCOM <span title="Last value: 1.38" class="progress progress-good progress-lt">-0.1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
+                <div class="number">1.28</div>
             </div>
         </div>
         <div class="column">
@@ -152,6 +161,15 @@
                             <td>0.9</td>
                         </tr>
                                             <tr>
+                            <td>App\Repository\GuildSquadRepository</td>
+                            <td>1</td>
+                            <td>0</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0</td>
+                            <td>0</td>
+                        </tr>
+                                            <tr>
                             <td>App\Repository\SettingRepository</td>
                             <td>2</td>
                             <td>28.07</td>
@@ -179,6 +197,15 @@
                             <td>4.43</td>
                         </tr>
                                             <tr>
+                            <td>App\Entity\GuildSquad</td>
+                            <td>1</td>
+                            <td>67.21</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.02</td>
+                            <td>4</td>
+                        </tr>
+                                            <tr>
                             <td>App\Entity\Setting</td>
                             <td>1</td>
                             <td>186.03</td>
@@ -198,12 +225,21 @@
                         </tr>
                                             <tr>
                             <td>App\Entity\Account</td>
-                            <td>4</td>
-                            <td>332</td>
+                            <td>3</td>
+                            <td>446.18</td>
                             <td>1</td>
                             <td>1</td>
-                            <td>0.11</td>
-                            <td>11.82</td>
+                            <td>0.15</td>
+                            <td>12.88</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Entity\RequestTrait</td>
+                            <td>1</td>
+                            <td>63.12</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>0.02</td>
+                            <td>3.43</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\Guild</td>
@@ -271,11 +307,29 @@
                                             <tr>
                             <td>App\Handler\ApiHandler</td>
                             <td>1</td>
-                            <td>490.69</td>
-                            <td>3</td>
-                            <td>2</td>
-                            <td>0.16</td>
-                            <td>7.5</td>
+                            <td>1090.68</td>
+                            <td>6</td>
+                            <td>4</td>
+                            <td>0.36</td>
+                            <td>10.59</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Handler\GuildSquadHandler</td>
+                            <td>1</td>
+                            <td>76.11</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.03</td>
+                            <td>3.19</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Handler\AccountHandler</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>1</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                                             <tr>
                             <td>App\Handler\UserCharacterHandler</td>
@@ -305,6 +359,24 @@
                             <td>0</td>
                         </tr>
                                             <tr>
+                            <td>DoctrineMigrations\Version20180211173413</td>
+                            <td>1</td>
+                            <td>54</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.02</td>
+                            <td>1.14</td>
+                        </tr>
+                                            <tr>
+                            <td>DoctrineMigrations\Version20180211103612</td>
+                            <td>1</td>
+                            <td>44.92</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.01</td>
+                            <td>1.17</td>
+                        </tr>
+                                            <tr>
                             <td>DoctrineMigrations\Version20180202183035</td>
                             <td>1</td>
                             <td>60</td>
@@ -330,6 +402,15 @@
                             <td>1</td>
                             <td>0.04</td>
                             <td>1.07</td>
+                        </tr>
+                                            <tr>
+                            <td>DoctrineMigrations\Version20180211183331</td>
+                            <td>1</td>
+                            <td>44.92</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.01</td>
+                            <td>1.17</td>
                         </tr>
                                             <tr>
                             <td>DoctrineMigrations\Version20180206213005</td>
@@ -442,11 +523,11 @@
                                             <tr>
                             <td>App\Controller\API\UserCharacterController</td>
                             <td>1</td>
-                            <td>18.58</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>0.01</td>
-                            <td>0.75</td>
+                            <td>58.95</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>0.02</td>
+                            <td>5.63</td>
                         </tr>
                                             <tr>
                             <td>App\Controller\API\HookController</td>
@@ -458,13 +539,22 @@
                             <td>2</td>
                         </tr>
                                             <tr>
+                            <td>App\Controller\API\GuildSquadController</td>
+                            <td>1</td>
+                            <td>39.47</td>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>0.01</td>
+                            <td>1.63</td>
+                        </tr>
+                                            <tr>
                             <td>App\Controller\API\AccountController</td>
                             <td>1</td>
-                            <td>12</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>0</td>
-                            <td>0.67</td>
+                            <td>76.4</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>0.03</td>
+                            <td>5.33</td>
                         </tr>
                                             <tr>
                             <td>App\Kernel</td>
@@ -546,7 +636,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
