--- a/myreport/panel.html
+++ b/myreport/panel.html
@@ -49,31 +49,40 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">2454</div>
-                <div class="label">lines of code </div>
+                <div class="number">2970</div>
+                <div class="label">lines of code <span title="Last value: 2454" class="progress progress-neutral progress-gt">+516 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="number">
-                    45                    <small> (100                        %)
+                    54                    <small> (100                        %)
                     </small>
                 </div>
-                <div class="label">classes </div>
+                <div class="label">classes <span title="Last value: 45" class="progress progress-neutral progress-gt">+9 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">2                    <small> (4                        %)
+                <div class="number">3                    <small> (6                        %)
                     </small>
                 </div>
-                <div class="label">interfaces </div>
+                <div class="label">interfaces <span title="Last value: 2" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
 
@@ -107,8 +116,11 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div
-                    class="number">1.38</div>
-                <div class="label">average LCOM </div>
+                    class="number">1.28</div>
+                <div class="label">average LCOM <span title="Last value: 1.38" class="progress progress-good progress-lt">-0.1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
     </div>
@@ -129,13 +141,13 @@
                             <td>App\Entity\UserCharacter <span class="badge"
                                                                     title="Maintainability Index">91.61</span>
                             </td>
-                            <td>0.28</td>
+                            <td>0.27</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\Character <span class="badge"
                                                                     title="Maintainability Index">89.18</span>
                             </td>
-                            <td>0.26</td>
+                            <td>0.25</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\User <span class="badge"
@@ -147,7 +159,19 @@
                             <td>App\Entity\Guild <span class="badge"
                                                                     title="Maintainability Index">94.12</span>
                             </td>
-                            <td>0.07</td>
+                            <td>0.06</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Handler\ApiHandler <span class="badge"
+                                                                    title="Maintainability Index">76.95</span>
+                            </td>
+                            <td>0.01</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Entity\Account <span class="badge"
+                                                                    title="Maintainability Index">81.13</span>
+                            </td>
+                            <td>0.01</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\Setting <span class="badge"
@@ -162,26 +186,14 @@
                             <td>0.01</td>
                         </tr>
                                             <tr>
-                            <td>App\Utils\UserCrawler <span class="badge"
-                                                                    title="Maintainability Index">90.67</span>
-                            </td>
-                            <td>0.01</td>
-                        </tr>
-                                            <tr>
-                            <td>App\Handler\ApiHandler <span class="badge"
-                                                                    title="Maintainability Index">84.82</span>
-                            </td>
-                            <td>0.01</td>
-                        </tr>
-                                            <tr>
-                            <td>App\Repository\GuildRepository <span class="badge"
-                                                                    title="Maintainability Index">112.23</span>
+                            <td>App\Controller\API\UserController <span class="badge"
+                                                                    title="Maintainability Index">116.09</span>
                             </td>
                             <td>0</td>
                         </tr>
                                             <tr>
-                            <td>App\Controller\API\SecurityController <span class="badge"
-                                                                    title="Maintainability Index">91.25</span>
+                            <td>App\DataFixtures\LoadSettings <span class="badge"
+                                                                    title="Maintainability Index">84.59</span>
                             </td>
                             <td>0</td>
                         </tr>
@@ -194,8 +206,11 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="number">
-                    1.6                </div>
-                <div class="label">Average cyclomatic complexity by class </div>
+                    1.63                </div>
+                <div class="label">Average cyclomatic complexity by class <span title="Last value: 1.6" class="progress progress-bad progress-gt">+0.03 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+    <path d="M0 0h24v24H0z" fill="none"/>
+</svg></span></div>
             </div>
         </div>
         <div class="column">
