--- a/myreport/relations.html
+++ b/myreport/relations.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
 
@@ -92,7 +92,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
@@ -303,6 +303,15 @@
         "relations": []
     },
     {
+        "name": "\\App\\Repository\\GuildSquadRepository",
+        "size": 3000,
+        "relations": [
+            "\\Doctrine\\Bundle\\DoctrineBundle\\Repository\\ServiceEntityRepository",
+            "\\Symfony\\Bridge\\Doctrine\\RegistryInterface",
+            "\\parent"
+        ]
+    },
+    {
         "name": "\\App\\Repository\\SettingRepository",
         "size": 3000,
         "relations": [
@@ -322,17 +331,27 @@
         "relations": []
     },
     {
+        "name": "\\App\\Entity\\GuildSquad",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "\\App\\Entity\\EntityInterface",
+        "size": 3000,
+        "relations": []
+    },
+    {
+        "name": "\\App\\Entity\\Account",
+        "size": 3000,
+        "relations": []
+    },
+    {
         "name": "\\App\\Entity\\Setting",
         "size": 3000,
         "relations": []
     },
     {
         "name": "\\Doctrine\\Common\\Collections\\ArrayCollection",
-        "size": 3000,
-        "relations": []
-    },
-    {
-        "name": "\\App\\Entity\\Account",
         "size": 3000,
         "relations": []
     },
@@ -355,6 +374,13 @@
         "name": "\\DateInterval",
         "size": 3000,
         "relations": []
+    },
+    {
+        "name": "\\App\\Entity\\RequestTrait",
+        "size": 3000,
+        "relations": [
+            "\\App\\Entity\\EntityInterface"
+        ]
     },
     {
         "name": "\\App\\Utils\\BaseCrawler",
@@ -463,6 +489,11 @@
         "relations": []
     },
     {
+        "name": "\\Symfony\\Component\\Security\\Core\\Authentication\\Token\\Storage\\TokenStorageInterface",
+        "size": 3000,
+        "relations": []
+    },
+    {
         "name": "\\FOS\\RestBundle\\View\\View",
         "size": 3000,
         "relations": []
@@ -476,6 +507,21 @@
         "name": "\\Pagerfanta\\Adapter\\DoctrineORMAdapter",
         "size": 3000,
         "relations": []
+    },
+    {
+        "name": "\\App\\Handler\\GuildSquadHandler",
+        "size": 3000,
+        "relations": [
+            "\\App\\Handler\\ApiHandler",
+            "\\Doctrine\\ORM\\QueryBuilder"
+        ]
+    },
+    {
+        "name": "\\App\\Handler\\AccountHandler",
+        "size": 3000,
+        "relations": [
+            "\\App\\Handler\\ApiHandler"
+        ]
     },
     {
         "name": "\\App\\Handler\\UserCharacterHandler",
@@ -515,7 +561,7 @@
         "relations": []
     },
     {
-        "name": "\\DoctrineMigrations\\Version20180202183035",
+        "name": "\\DoctrineMigrations\\Version20180211173413",
         "size": 3000,
         "relations": [
             "\\Doctrine\\DBAL\\Migrations\\AbstractMigration",
@@ -533,6 +579,22 @@
         "relations": []
     },
     {
+        "name": "\\DoctrineMigrations\\Version20180211103612",
+        "size": 3000,
+        "relations": [
+            "\\Doctrine\\DBAL\\Migrations\\AbstractMigration",
+            "\\Doctrine\\DBAL\\Schema\\Schema"
+        ]
+    },
+    {
+        "name": "\\DoctrineMigrations\\Version20180202183035",
+        "size": 3000,
+        "relations": [
+            "\\Doctrine\\DBAL\\Migrations\\AbstractMigration",
+            "\\Doctrine\\DBAL\\Schema\\Schema"
+        ]
+    },
+    {
         "name": "\\DoctrineMigrations\\Version20180206215132",
         "size": 3000,
         "relations": [
@@ -542,6 +604,14 @@
     },
     {
         "name": "\\DoctrineMigrations\\Version20180204093803",
+        "size": 3000,
+        "relations": [
+            "\\Doctrine\\DBAL\\Migrations\\AbstractMigration",
+            "\\Doctrine\\DBAL\\Schema\\Schema"
+        ]
+    },
+    {
+        "name": "\\DoctrineMigrations\\Version20180211183331",
         "size": 3000,
         "relations": [
             "\\Doctrine\\DBAL\\Migrations\\AbstractMigration",
@@ -790,11 +860,31 @@
         ]
     },
     {
+        "name": "\\App\\Controller\\API\\GuildSquadController",
+        "size": 3000,
+        "relations": [
+            "\\FOS\\RestBundle\\Controller\\FOSRestController",
+            "\\Symfony\\Component\\HttpFoundation\\Request",
+            "\\Sensio\\Bundle\\FrameworkExtraBundle\\Configuration\\Route",
+            "\\Sensio\\Bundle\\FrameworkExtraBundle\\Configuration\\Method",
+            "\\Swagger\\Annotations",
+            "\\Nelmio\\ApiDocBundle\\Annotation\\Model",
+            "\\App\\Entity\\GuildSquad"
+        ]
+    },
+    {
+        "name": "\\Sensio\\Bundle\\FrameworkExtraBundle\\Configuration\\Method",
+        "size": 3000,
+        "relations": []
+    },
+    {
         "name": "\\App\\Controller\\API\\AccountController",
         "size": 3000,
         "relations": [
             "\\FOS\\RestBundle\\Controller\\FOSRestController",
+            "\\Symfony\\Component\\HttpFoundation\\Request",
             "\\Sensio\\Bundle\\FrameworkExtraBundle\\Configuration\\Route",
+            "\\Sensio\\Bundle\\FrameworkExtraBundle\\Configuration\\Method",
             "\\Swagger\\Annotations",
             "\\Nelmio\\ApiDocBundle\\Annotation\\Model"
         ]
