--- a/myreport/violations.html
+++ b/myreport/violations.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content">
         <div class="report-details">
-            Created at 2018-02-10 17:48:19        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2018-02-12 22:32:39        , with PHPMetrics v2.3.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
 
@@ -57,7 +57,7 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">Violations</div>
-                <div class="number">0</div>
+                <div class="number">2</div>
             </div>
         </div>
         <div class="column">
@@ -69,13 +69,13 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">Warnings</div>
-                <div class="number">0</div>
+                <div class="number">1</div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="label">Errors</div>
-                <div class="number">0</div>
+                <div class="number">1</div>
             </div>
         </div>
         <div class="column">
@@ -86,6 +86,81 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="column">
+            <div class="bloc">
+                <h4>Violations</h4>
+                <table class="table-pagerank table-small">
+                    <thead>
+                    <tr>
+                        <th>Component</th>
+                        <th>Violations</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    
+                            <tr>
+                                <td>
+                                    <a onclick="return toggle('bloc-5a8207f74ae4d');">App\Entity\Account</a>
+                                    <div class="violation-list" id="bloc-5a8207f74ae4d">
+                                                                                    <div class="violation">
+                                                <div class="name">
+                                                    Blob / God object                                                    <span
+                                                        class="badge level level-error">error</span>
+
+                                                </div>
+                                                <div
+                                                    class="description">A blob object (or "god class") does not follow the Single responsability principle.<br />
+<br />
+* object has lot of public methods  (20, excluding getters and setters)<br />
+* object has a high Lack of cohesion of methods (LCOM=3)<br />
+* object knows everything (and use lot of external classes)<br />
+<br />
+Maybe you should reducing the number of methods splitting this object in many sub objects.</div>
+
+                                            </div>
+                                                                            </div>
+                                </td>
+
+                                <td valign="top">
+                                                                            <span
+                                            class="badge level level-error"> Blob / God object</span>
+                                                                    </td>
+                            </tr>
+                        
+                            <tr>
+                                <td>
+                                    <a onclick="return toggle('bloc-5a8207f74aebf');">App\Handler\ApiHandler</a>
+                                    <div class="violation-list" id="bloc-5a8207f74aebf">
+                                                                                    <div class="violation">
+                                                <div class="name">
+                                                    Probably bugged                                                    <span
+                                                        class="badge level level-warning">warning</span>
+
+                                                </div>
+                                                <div
+                                                    class="description">This component contains in theory 0.36 bugs.<br />
+<br />
+* Calculation is based on number of operators, operands, cyclomatic complexity<br />
+* See more details at https://en.wikipedia.org/wiki/Halstead_complexity_measures<br />
+*  testsuites has dependency to this class.<br />
+<br />
+Maybe you should check your unit tests for this class.</div>
+
+                                            </div>
+                                                                            </div>
+                                </td>
+
+                                <td valign="top">
+                                                                            <span
+                                            class="badge level level-warning"> Probably bugged</span>
+                                                                    </td>
+                            </tr>
+                                            </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript">
         function toggle(id) {
@@ -127,7 +202,7 @@
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
                         </svg>
-                        Violations (0)
+                        Violations (2)
                     </a>
                 </li>
                                 <li>
